test_regress/t/t_var_dotted_dup_bad.out
%Error: t/t_var_dotted_dup_bad.v:14:18: Duplicate declaration of instance: 'dccm_bank'
   14 |          eh2_ram dccm_bank (.*);   
      |                  ^~~~~~~~~
        t/t_var_dotted_dup_bad.v:11:18: ... Location of original declaration
   11 |          eh2_ram dccm_bank (.*);
      |                  ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
